# satyrographos

./: .gitignore  .travis.yml  CHANGELOG.md  README-ja.md  README.md  dune-project  satyrographos.opam
.github/workflows/: ci.yaml
doc/: internals.ja.md  internals.md  lint.md  terminology.md
src/: Environment.ml  SatyrographosDirs.ml  buildScript.ml  buildScript_0_0_2.ml  buildScript_0_0_3.ml  buildScript_prim.ml  commandInstall.ml  commandOpam.ml  commandPin.ml  commandPin.mli  dune  environment.ml  environment.mli  environmentStatus.ml  fontInfo.ml  fontInfo.mli  glob.ml  glob.mli  glob_lexer.mll  glob_parser.mly  glob_tokens.mly  library.ml  library.mli  libraryMap.ml  libraryMap.mli  location.ml  location.mli  main.ml  metadata.ml  metadata.mli  opamSatysfiRegistry.ml  opamSatysfiRegistry.mli  opamWrapper.ml  package.ml  processUtil.ml  processUtil.mli  registory.ml  registoryMetadata.ml  registoryStore.ml  registry.ml  (+9 more)
src/autogen/: autogen.ml  dune  fonts.ml  fontsSystem.ml  libraries.ml  today.ml
src/command/: build.ml  build.mli  dune  install.ml  install.mli  lint.ml  lint.mli  lint_module_dependency.ml  lint_module_dependency.mli  lint_module_hashes.ml  lint_module_opam.ml  lint_module_opam.mli  lint_prim.ml  lint_problem.ml  lockdown.ml  migrate.ml  new.ml  new.mli  opam.ml  pin.ml  pin.mli  runSatysfi.ml  runSatysfi.mli
src/lockdown/: dune  lockdown.ml  lockdownFile.ml  opamDependencies.ml  yamlYojson.ml
src/satysfi/: dependency.ml  dependencyGraph.ml  dune  migration.ml  mode.ml  satysfiDirs.ml  version.ml  writer.ml
src/template/: dune  template.ml  templateDocMake.ml  templateDocMakeEn.ml  templateDocMakeJa.ml  templateFonts.ml  templateLib.ml  template_docMake_en.ml  template_docMake_ja.ml  template_docOmake_en.ml  template_docOmake_ja.ml  template_exampleAutogen.ml  template_fonts.ml  template_lib.ml
test/testcases/: command_build__doc_make.expected  command_build__doc_make.ml  command_build__doc_satysfi.expected  command_build__doc_satysfi.ml  command_build__doc_with_autogen.expected  command_build__doc_with_autogen.ml  command_build__doc_with_libraries.expected  command_build__doc_with_libraries.ml  command_debug_depgraph__empty.t  command_debug_depgraph__import_duplex.t  command_debug_depgraph__import_simplex.t  command_debug_depgraph__missing_files.t  command_debug_depgraph__require_followed.t  command_debug_depgraph__require_unfollowed.t  command_debug_depgraph__satysfi_md.t  command_debug_depgraph__satysfi_versions.t  command_debug_depgraph__subgraph_with_mode.t  command_install__distWithBrokenHash.expected  command_install__distWithBrokenHash.ml  command_install__distWithNonHashUnderHashDir.expected  command_install__distWithNonHashUnderHashDir.ml  command_install__emptyDist.expected  command_install__emptyDist.ml  command_install__missingDist.ml  command_install__onlyDist.expected  command_install__onlyDist.ml  command_install__thirdParties.expected  command_install__thirdParties.ml  command_install__thirdParties_brokenDependency.ml  command_install__twoDists.expected  command_install__twoDists.ml  command_install__unmanagedDirAlreadyExists.expected  command_install__unmanagedDirAlreadyExists.ml  command_install_l__autogen.expected  command_install_l__autogen.ml  command_install_l__dependent.expected  command_install_l__dependent.ml  command_install_l__independentTwo.expected  command_install_l__independentTwo.ml  command_install_l__invalid_autogen.expected  (+118 more)
test/testcases/64bit/: command_debug_depgraph__empty.t  command_debug_depgraph__import_duplex.t  command_debug_depgraph__import_simplex.t  dune
test/testlib/: dune  prepareBin.ml  prepareOpamReg.ml  testCommand.ml  testLib.ml  testLib.mli
