opam-version: "2.0"
name: "satyrographos"
version: "0.0.1.7"
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: [
  "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
]
homepage: "https://github.com/na4zagin3/satyrographos"
dev-repo: "git+https://github.com/na4zagin3/satyrographos.git"
bug-reports: "https://github.com/na4zagin3/satyrographos/issues"
license: "LGPL3+"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.06.0"}
  "core" {< "v0.13"}
  "dune" {build}
  "fileutils"
  "json-derivers"
  "ppx_deriving"
  "ppx_jane" {< "v0.13"}
  "uri" {>= "2.0.0"}
  "yojson"
]
synopsis: "A package manager for SATySFi"
description: """
Satyrographos is a package manager for [SATySFi].

Satyrographos is distributed under the LGPL-3.0 license.


  [SATySFi]: https://github.com/gfngfn/SATySFi
  [Satyrographos]: https://github.com/na4zagin3/satyrographos"""
