opam-version: "2.0"
name: "satyrographos"
version: "0.0.2.2"
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: [
  "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
]
homepage: "https://github.com/na4zagin3/satyrographos"
dev-repo: "git+https://github.com/na4zagin3/satyrographos.git"
bug-reports: "https://github.com/na4zagin3/satyrographos/issues"
license: "LGPL-3.0-or-later"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest"]
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.4"}
  "fileutils"
  "json-derivers"
  "ppx_deriving"
  "opam-format" {>= "2.0" & < "2.1"}
  "uri" {>= "3.0.0"}
  "uri-sexp" {>= "3.0.0"}
  "yojson"

  # Janestreet Libs
  "core" {< "v0.14"}
  "ppx_jane"
  "shexp"
]
synopsis: "A package manager for SATySFi"
description: """
Satyrographos is a package manager for [SATySFi].

Satyrographos is distributed under the LGPL-3.0 license.


  [SATySFi]: https://github.com/gfngfn/SATySFi
  [Satyrographos]: https://github.com/na4zagin3/satyrographos"""
