opam-version: "2.0"
name: "satyrographos"
version: "0.0.2.10"
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: [
  "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
]
homepage: "https://github.com/na4zagin3/satyrographos"
dev-repo: "git+https://github.com/na4zagin3/satyrographos.git"
bug-reports: "https://github.com/na4zagin3/satyrographos/issues"
license: "LGPL-3.0-or-later"
build: [
  ["dune" "subst"] {dev}
  ["sed" "-i.bak" "-e" "s/%%%%VERSION_NUM%%%%/%{version}%/" "bin/main.ml"]
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.09.0"}

  "conf-diffutils" {with-test}
  "dune" {>= "2.7"}
  "fileutils"
  "json-derivers"
  "menhir"
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ocamlgraph"
  "opam-format" {>= "2.0" & < "2.1"}
  "opam-state" {>= "2.0" & < "2.1"}
  "re"
  "stringext" {with-test}
  "uri" {>= "3.0.0"}
  "uri-sexp" {>= "3.0.0"}
  "yaml" {>= "2.0" & < "3.0"}
  "yojson"

  # Janestreet Libs
  "core" {>= "v0.14" & < "v0.15"}
  "ppx_jane"
  "shexp"
]
synopsis: "A package manager for SATySFi"
description: """
Satyrographos is a package manager for [SATySFi].

Satyrographos is distributed under the LGPL-3.0 license.


  [SATySFi]: https://github.com/gfngfn/SATySFi
  [Satyrographos]: https://github.com/na4zagin3/satyrographos"""
